# trade-helper

./: .env.example  .gitignore  AGENTS.md  Agent.md  LICENSE  PRD.md  README.md  docker-compose.yml  package-lock.json
backend/: .env.example  ARCHITECTURE.md  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  268e0e9f2257_init.py  3d26f8f1a8c7_add_is_final_to_baseline_bars.py  7f0a4a3028a1_be0005_split_market_bars_tables.py  f1a0e7d9c001_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py  errors.py
backend/app/api/dto/: alerts.py  market_data.py  rules.py  watchlist.py
backend/app/api/v1/: router.py
backend/app/application/: container.py
backend/app/application/alerts/: interfaces.py  mapper.py  service.py
backend/app/application/auth/: __init__.py  interfaces.py  login_throttle.py  service.py
backend/app/application/demo_market/: __init__.py  service.py
backend/app/application/market_data/: errors.py  interfaces.py  policy.py  realtime_publisher.py  service.py  snapshot_mapper.py  stream_event_mapper.py  stream_hub.py  stream_policy.py  stream_session.py  trading_calendar.py
backend/app/application/options/: service.py
backend/app/core/: celery_app.py  config.py  security.py
backend/app/db/: models.py  session.py
backend/app/domain/: models.py
backend/app/services/: iv_scanner.py  polygon.py
backend/app/tasks/: async_runtime.py  market_data.py  realtime.py  scan.py
backend/scripts/: check_boundaries.py
backend/tests/: test_market_data_service.py
(+218 files in other folders)
